[package]
name = "Implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
plotters = "0.3.5"
plotters-backend = "0.3.5"
rand = "0.8.5"
pyo3 = {version = "0.22.0", features = ["auto-initialize"]}
